# akshare-one-mcp

./: Dockerfile  README.md  README_zh.md  pyproject.toml
skills/akshare-stock-mcp/: SKILL.md
skills/akshare-stock-mcp/agents/: openai.yaml
src/akshare_one_mcp/: __main__.py  server.py
