[project]
name = "akshare-one-mcp"
version = "0.3.9"
description = "MCP server that provides access to Chinese stock market data using akshare-one"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "zwldarren", email = "zwldarren@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.11.3",
]
keywords = ["akshare", "stock", "mcp", "mcp-server"]

[project.optional-dependencies]
http = [
    "uvicorn>=0.35.0",
]
legacy-akshare = [
    "akshare-one>=0.3.14",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.3",
]

[project.urls]
Homepage = "https://github.com/zwldarren/akshare-one-mcp"
Repository = "https://github.com/zwldarren/akshare-one-mcp.git"

[project.scripts]
akshare-one-mcp = "akshare_one_mcp.__main__:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.pyright]
typeCheckingMode = "standard"
